feat: adopt Redis-like encodings and keyspace
- Add Phase 0 in-process benchmarks and measurement script

- Introduce ValueEncoding + YierdisObject stored directly in keyspace

- Implement packed encodings for small hash/list/zset values

- Replace HashMap/HashSet with open-addressing tables and incremental rehashing keyspace

- Add unit tests for packed structures and keyspace

How verified: mvn test