@@ -1,6 +1,7 @@
 package yier.bubu.redis.db;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.ArrayDeque;
 
@@ -13,13 +14,18 @@ final class ListValue implements YierdisValue {
     private static final int QUICKLIST_NODE_MAX_ENTRIES = 64;
     private static final int QUICKLIST_NODE_MAX_BYTES = 8 * 1024;
 
-    private List<byte[]> listpack = new ArrayList<>();
+    private PackedListPack listpack = new PackedListPack();
     private ArrayDeque<ListPackNode> quicklist;
     private int totalSize = 0;
 
     @Override
     public ValueType type() {
         return ValueType.LIST;
+    }
+
+    @Override
+    public ValueEncoding encoding() {
+        return quicklist != null ? ValueEncoding.LIST_QUICKLIST : ValueEncoding.LIST_PACKED;
     }
 
     int size() {
@@ -41,7 +47,7 @@ final class ListValue implements YierdisValue {
         }
 
         for (byte[] v : values) {
-            listpack.add(0, v);
+            listpack.addFirst(v);
             totalSize++;
         }
         if (listpack.size() > LISTPACK_MAX_ENTRIES) {
@@ -63,7 +69,9 @@ final class ListValue implements YierdisValue {
             return;
         }
 
-        listpack.addAll(values);
+        for (byte[] v : values) {
+            listpack.addLast(v);
+        }
         totalSize += values.size();
         if (listpack.size() > LISTPACK_MAX_ENTRIES) {
             convertToQuickList();
@@ -77,10 +85,20 @@ final class ListValue implements YierdisValue {
         int expected = Math.min(count, totalSize);
         List<byte[]> out = new ArrayList<>(expected);
         for (int i = 0; i < count; i++) {
-            byte[] v = quicklist != null ? qlPollFirst() : pollListpackFirst();
-            if (v == null) {
+            if (quicklist != null) {
+                if (quicklist.isEmpty()) {
+                    break;
+                }
+                byte[] v = qlPollFirst();
+                totalSize--;
+                out.add(v);
+                continue;
+            }
+
+            if (listpack.isEmpty()) {
                 break;
             }
+            byte[] v = pollListpackFirst();
             totalSize--;
             out.add(v);
         }
@@ -94,10 +112,20 @@ final class ListValue implements YierdisValue {
         int expected = Math.min(count, totalSize);
         List<byte[]> out = new ArrayList<>(expected);
         for (int i = 0; i < count; i++) {
-            byte[] v = quicklist != null ? qlPollLast() : pollListpackLast();
-            if (v == null) {
+            if (quicklist != null) {
+                if (quicklist.isEmpty()) {
+                    break;
+                }
+                byte[] v = qlPollLast();
+                totalSize--;
+                out.add(v);
+                continue;
+            }
+
+            if (listpack.isEmpty()) {
                 break;
             }
+            byte[] v = pollListpackLast();
             totalSize--;
             out.add(v);
         }
@@ -142,14 +170,8 @@ final class ListValue implements YierdisValue {
                 }
             }
         } else {
-            for (byte[] v : listpack) {
-                if (idx > normalizedStop) {
-                    break;
-                }
-                if (idx >= normalizedStart) {
-                    out.add(v);
-                }
-                idx++;
+            for (int i = normalizedStart; i <= normalizedStop; i++) {
+                out.add(listpack.get(i));
             }
         }
         return out;
@@ -181,12 +203,12 @@ final class ListValue implements YierdisValue {
 
         ArrayDeque<ListPackNode> out = new ArrayDeque<>();
         ListPackNode node = new ListPackNode();
-        for (byte[] v : listpack) {
-            if (!node.canAdd(v)) {
+        for (int i = 0; i < listpack.size(); i++) {
+            if (!node.canAddFrom(listpack, i)) {
                 out.addLast(node);
                 node = new ListPackNode();
             }
-            node.addLast(v);
+            node.addLastFrom(listpack, i);
         }
         if (!node.isEmpty()) {
             out.addLast(node);
@@ -296,7 +318,7 @@ final class ListValue implements YierdisValue {
         if (listpack.isEmpty()) {
             return null;
         }
-        return listpack.remove(0);
+        return listpack.removeFirst();
     }
 
     private byte[] pollListpackLast() {
@@ -304,63 +326,295 @@ final class ListValue implements YierdisValue {
         if (size == 0) {
             return null;
         }
-        return listpack.remove(size - 1);
+        return listpack.removeLast();
     }
 
-    private static final class ListPackNode {
-        private final ArrayList<byte[]> values = new ArrayList<>();
-        private int bytesSize = 0;
+    private static final class PackedListPack {
+        private byte[] blob = new byte[0];
+        private int[] offsets = new int[0];
+        private int size = 0;
+        private int rawBytesSize = 0;
 
-        boolean canAdd(byte[] v) {
-            int len = v == null ? 0 : v.length;
-            if (values.isEmpty()) {
-                return true;
-            }
-            if (values.size() >= QUICKLIST_NODE_MAX_ENTRIES) {
-                return false;
-            }
-            return bytesSize + len <= QUICKLIST_NODE_MAX_BYTES;
+        int size() {
+            return size;
         }
 
         boolean isEmpty() {
-            return values.isEmpty();
+            return size == 0;
         }
 
-        int size() {
-            return values.size();
+        int rawBytesSize() {
+            return rawBytesSize;
         }
 
-        byte[] get(int i) {
-            return values.get(i);
+        byte[] get(int index) {
+            if (index < 0 || index >= size) {
+                throw new IndexOutOfBoundsException();
+            }
+            int p = offsets[index];
+            long r = readVarint(blob, p);
+            int storedLen = (int) r;
+            p = (int) (r >>> 32);
+            if (storedLen == 0) {
+                return null;
+            }
+            int len = storedLen - 1;
+            return Arrays.copyOfRange(blob, p, p + len);
+        }
+
+        int elementRawLen(int index) {
+            int p = offsets[index];
+            long r = readVarint(blob, p);
+            int storedLen = (int) r;
+            return storedLen == 0 ? 0 : storedLen - 1;
+        }
+
+        void appendElementTo(int index, PackedListPack dest) {
+            int p = offsets[index];
+            long r = readVarint(blob, p);
+            int storedLen = (int) r;
+            p = (int) (r >>> 32);
+            if (storedLen == 0) {
+                dest.addLastNull();
+                return;
+            }
+            int len = storedLen - 1;
+            dest.addLastFrom(blob, p, len);
         }
 
         void addFirst(byte[] v) {
-            values.add(0, v);
-            bytesSize += v == null ? 0 : v.length;
+            int rawLen = v == null ? 0 : v.length;
+            int storedLen = v == null ? 0 : rawLen + 1;
+            int encodedLen = varintLength(storedLen) + rawLen;
+
+            byte[] next = new byte[blob.length + encodedLen];
+            int w = 0;
+            w = writeVarint(next, w, storedLen);
+            if (rawLen > 0) {
+                System.arraycopy(v, 0, next, w, rawLen);
+            }
+            System.arraycopy(blob, 0, next, encodedLen, blob.length);
+
+            int[] nextOffsets = new int[size + 1];
+            nextOffsets[0] = 0;
+            for (int i = 0; i < size; i++) {
+                nextOffsets[i + 1] = offsets[i] + encodedLen;
+            }
+
+            blob = next;
+            offsets = nextOffsets;
+            size++;
+            rawBytesSize += rawLen;
         }
 
         void addLast(byte[] v) {
-            values.add(v);
-            bytesSize += v == null ? 0 : v.length;
+            if (v == null) {
+                addLastNull();
+                return;
+            }
+            addLastFrom(v, 0, v.length);
+        }
+
+        void addLastNull() {
+            int pairStart = blob.length;
+            byte[] next = Arrays.copyOf(blob, pairStart + 1);
+            next[pairStart] = 0; // storedLen=0 => null
+
+            blob = next;
+            offsets = Arrays.copyOf(offsets, size + 1);
+            offsets[size] = pairStart;
+            size++;
+        }
+
+        void addLastFrom(byte[] src, int off, int len) {
+            int storedLen = len + 1;
+            int encodedLen = varintLength(storedLen) + len;
+
+            int elemStart = blob.length;
+            byte[] next = new byte[elemStart + encodedLen];
+            System.arraycopy(blob, 0, next, 0, blob.length);
+
+            int w = elemStart;
+            w = writeVarint(next, w, storedLen);
+            if (len > 0) {
+                System.arraycopy(src, off, next, w, len);
+            }
+
+            blob = next;
+            offsets = Arrays.copyOf(offsets, size + 1);
+            offsets[size] = elemStart;
+            size++;
+            rawBytesSize += len;
         }
 
         byte[] removeFirst() {
-            if (values.isEmpty()) {
+            if (size == 0) {
                 return null;
             }
-            byte[] v = values.remove(0);
-            bytesSize -= v == null ? 0 : v.length;
-            return v;
+            int start = offsets[0];
+            long r = readVarint(blob, start);
+            int storedLen = (int) r;
+            int p = (int) (r >>> 32);
+            int len = storedLen == 0 ? 0 : storedLen - 1;
+            int end = p + len;
+
+            byte[] value = storedLen == 0 ? null : Arrays.copyOfRange(blob, p, end);
+
+            byte[] next = new byte[blob.length - end];
+            System.arraycopy(blob, end, next, 0, blob.length - end);
+
+            int[] nextOffsets = new int[size - 1];
+            for (int i = 1; i < size; i++) {
+                nextOffsets[i - 1] = offsets[i] - end;
+            }
+
+            blob = next;
+            offsets = nextOffsets;
+            size--;
+            rawBytesSize -= len;
+            return value;
         }
 
         byte[] removeLast() {
-            int s = values.size();
+            int s = size;
             if (s == 0) {
                 return null;
             }
-            byte[] v = values.remove(s - 1);
-            bytesSize -= v == null ? 0 : v.length;
-            return v;
+            int start = offsets[s - 1];
+            long r = readVarint(blob, start);
+            int storedLen = (int) r;
+            int p = (int) (r >>> 32);
+            int len = storedLen == 0 ? 0 : storedLen - 1;
+            int end = p + len;
+
+            byte[] value = storedLen == 0 ? null : Arrays.copyOfRange(blob, p, end);
+
+            blob = Arrays.copyOf(blob, start);
+            offsets = Arrays.copyOf(offsets, s - 1);
+            size--;
+            rawBytesSize -= len;
+            return value;
+        }
+
+        void appendAll(PackedListPack other) {
+            if (other == null || other.size == 0) {
+                return;
+            }
+            if (this.size == 0) {
+                this.blob = Arrays.copyOf(other.blob, other.blob.length);
+                this.offsets = Arrays.copyOf(other.offsets, other.offsets.length);
+                this.size = other.size;
+                this.rawBytesSize = other.rawBytesSize;
+                return;
+            }
+
+            int base = this.blob.length;
+            byte[] nextBlob = new byte[this.blob.length + other.blob.length];
+            System.arraycopy(this.blob, 0, nextBlob, 0, this.blob.length);
+            System.arraycopy(other.blob, 0, nextBlob, this.blob.length, other.blob.length);
+
+            int[] nextOffsets = Arrays.copyOf(this.offsets, this.size + other.size);
+            for (int i = 0; i < other.size; i++) {
+                nextOffsets[this.size + i] = base + other.offsets[i];
+            }
+
+            this.blob = nextBlob;
+            this.offsets = nextOffsets;
+            this.size += other.size;
+            this.rawBytesSize += other.rawBytesSize;
+        }
+
+        private static int varintLength(int v) {
+            int len = 1;
+            while ((v & ~0x7F) != 0) {
+                v >>>= 7;
+                len++;
+            }
+            return len;
+        }
+
+        private static int writeVarint(byte[] out, int pos, int v) {
+            while ((v & ~0x7F) != 0) {
+                out[pos++] = (byte) ((v & 0x7F) | 0x80);
+                v >>>= 7;
+            }
+            out[pos++] = (byte) v;
+            return pos;
+        }
+
+        private static long readVarint(byte[] buf, int pos) {
+            int result = 0;
+            int shift = 0;
+            while (true) {
+                int b = buf[pos++] & 0xFF;
+                result |= (b & 0x7F) << shift;
+                if ((b & 0x80) == 0) {
+                    break;
+                }
+                shift += 7;
+                if (shift > 28) {
+                    throw new IllegalStateException("varint too long");
+                }
+            }
+            return (((long) pos) << 32) | (result & 0xffffffffL);
+        }
+    }
+
+    private static final class ListPackNode {
+        private final PackedListPack pack = new PackedListPack();
+
+        boolean canAdd(byte[] v) {
+            int len = v == null ? 0 : v.length;
+            if (pack.isEmpty()) {
+                return true;
+            }
+            if (pack.size() >= QUICKLIST_NODE_MAX_ENTRIES) {
+                return false;
+            }
+            return pack.rawBytesSize() + len <= QUICKLIST_NODE_MAX_BYTES;
+        }
+
+        boolean canAddFrom(PackedListPack src, int elementIndex) {
+            int len = src.elementRawLen(elementIndex);
+            if (pack.isEmpty()) {
+                return true;
+            }
+            if (pack.size() >= QUICKLIST_NODE_MAX_ENTRIES) {
+                return false;
+            }
+            return pack.rawBytesSize() + len <= QUICKLIST_NODE_MAX_BYTES;
+        }
+
+        boolean isEmpty() {
+            return pack.isEmpty();
+        }
+
+        int size() {
+            return pack.size();
+        }
+
+        byte[] get(int i) {
+            return pack.get(i);
+        }
+
+        void addFirst(byte[] v) {
+            pack.addFirst(v);
+        }
+
+        void addLast(byte[] v) {
+            pack.addLast(v);
+        }
+
+        void addLastFrom(PackedListPack src, int elementIndex) {
+            src.appendElementTo(elementIndex, pack);
+        }
+
+        byte[] removeFirst() {
+            return pack.removeFirst();
+        }
+
+        byte[] removeLast() {
+            return pack.removeLast();
         }
 
         boolean canAppendAll(ListPackNode other) {
@@ -370,20 +624,17 @@ final class ListValue implements YierdisValue {
             if (this.isEmpty()) {
                 return true;
             }
-            if (this.values.size() + other.values.size() > QUICKLIST_NODE_MAX_ENTRIES) {
+            if (this.pack.size() + other.pack.size() > QUICKLIST_NODE_MAX_ENTRIES) {
                 return false;
             }
-            return this.bytesSize + other.bytesSize <= QUICKLIST_NODE_MAX_BYTES;
+            return this.pack.rawBytesSize() + other.pack.rawBytesSize() <= QUICKLIST_NODE_MAX_BYTES;
         }
 
         void appendAll(ListPackNode other) {
             if (other == null || other.isEmpty()) {
                 return;
             }
-            for (byte[] v : other.values) {
-                values.add(v);
-            }
-            bytesSize += other.bytesSize;
+            pack.appendAll(other.pack);
         }
     }
 }
